<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Player Score</string>
    
    <string name="btn_start">Start</string>
	<string name="btn_settings">Settings</string>
    <string name="btn_add">Add</string>
    <string name="btn_done">Done</string>
	<string name="btn_continue">Continue</string>
	<string name="btn_load">Load</string>
    
    <string name="title_settings">Settings</string>
    <string name="title_playerSelect">Select players:</string>
    <string name="title_scores">Scores</string>
    <string name="err_noPlayers">You must choose at least one player.</string>
</resources>
