<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerVertical="true"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical" >
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:width="300dp"
		android:onClick="buttonHandler"
		android:id="@+id/btn_start"
		android:text="@string/btn_start"/>
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:width="300dp"
		android:onClick="buttonHandler"
		android:id="@+id/btn_load"
		android:text="@string/btn_load"/>
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:width="300dp"
		android:onClick="buttonHandler"
		android:id="@+id/btn_settings"
		android:text="@string/btn_settings"/>
</LinearLayout>
