<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:id="@+id/title_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/title_settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <LinearLayout
        android:id="@+id/ll_settingsAddHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_below="@id/title_settings"
        android:orientation="horizontal" >
		<EditText
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/et_newName"
			android:maxLines="1"
			android:inputType="textCapSentences"
			android:layout_weight="3" />
		<Button
			android:id="@+id/btn_add"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:onClick="buttonHandler"
		    android:text="@string/btn_add"
		    android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_settingsBtnHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
		<Button
			android:id="@+id/btn_done"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:onClick="buttonHandler"
		    android:text="@string/btn_done"
		    android:layout_weight="1"/>
    </LinearLayout>
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/ll_settingsAddHolder"
		android:layout_above="@id/ll_settingsBtnHolder" />
</RelativeLayout>
